src-ken&y/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Count_Field_API_Name__c</fullName>
        <description>The API name of the field on the related object towards which this task must be counted.</description>
        <inlineHelpText>The API name of the field on the related object towards which this task must be counted.</inlineHelpText>
        <label>Count Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Owner__c</fullName>
        <description>Default Owner Id set by exception framework</description>
        <inlineHelpText>Default Owner Id set by exception framework</inlineHelpText>
        <label>Default Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Code__c</fullName>
        <description>The code that represents the exception uniquely.</description>
        <inlineHelpText>The code that represents the exception uniquely.</inlineHelpText>
        <label>Exception Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <description>This field is populated with a unique value so that the same kind of task is not created multiple times for a single record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is populated with a unique value so that the same kind of task is not created multiple times for a single record.</inlineHelpText>
        <label>Primary Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Prohibit_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prohibit Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Document_Id__c</fullName>
        <label>Source Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Document_Name__c</fullName>
        <label>Source Document Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Document__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Source_Document_Id__c, Source_Document_Name__c, &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Document</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>